# elevator-core

./: .gitignore  .release-please-manifest.json  404.html  AI-DISCLOSURE.md  CLAUDE.md  Cargo.toml  README.md  STABILITY.md  THIRD-PARTY-LICENSES.md  bevy-integration.html  binding-coverage.html  bindings.toml  config-versioning.html  configuration.html  custom-dispatch.html  deny.toml  dispatch-strategies.html  door-control.html  elevators.html  error-handling.html  events-metrics.html  extensions.html  hall-calls.html  headless-non-bevy.html  host-binding-parity.html  index.html  integration-gallery.html  introduction.html  justfile  lifecycle-hooks.html  loop-lines.html  manual-inspection-modes.html  movement-physics.html  performance.html  print.html  quick-start.html  release-please-config.json  rider-lifecycle.html  riders.html  searcher-09f2665d.js  (+62 more)
crates/elevator-bevy/: Cargo.toml
crates/elevator-bevy/examples/: showcase.rs
crates/elevator-bevy/src/: atmosphere.rs  breathing.rs  camera.rs  cinematic.rs  decor.rs  doctests.rs  glow.rs  input.rs  lib.rs  main.rs  palette.rs  passenger_ai.rs  plugin.rs  recorder.rs  rendering.rs  sim_bridge.rs  sparkle.rs  style.rs  trail.rs  ui.rs  vascular.rs
crates/elevator-bevy/src/rendering/: elevator.rs  mod.rs  rider.rs  shaft.rs
crates/elevator-contract/: Cargo.toml
crates/elevator-contract/src/: main.rs
crates/elevator-core/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/elevator-core/benches/: calibration_bench.rs  dispatch_bench.rs  multi_line_bench.rs  query_bench.rs  scaling_bench.rs  sim_bench.rs
crates/elevator-core/benches/common/: mod.rs
crates/elevator-core/examples/: basic.rs  config_file.rs  custom_dispatch.rs  dispatch_comparison.rs  door_commands.rs  events_loop.rs  extensions.rs  fp_player_rider.rs  headless_trace.rs  manual_driver.rs  playground_audit.rs  runtime_upgrades.rs  scenario.rs  showcase.rs  space_elevator.rs
crates/elevator-core/fuzz/: Cargo.toml
crates/elevator-core/fuzz/fuzz_targets/: config_parse.rs  sim_step_random.rs  snapshot_deserialize.rs  world_ops.rs
crates/elevator-core/src/: arrival_log.rs  builder.rs  config.rs  doctests.rs  door.rs  energy.rs  entity.rs  error.rs  eta.rs  events.rs  fp.rs  hooks.rs  host_error.rs  host_label.rs  ids.rs  lib.rs  metrics.rs  movement.rs  rider_index.rs  scenario.rs  sim.rs  snapshot.rs  stop.rs  tagged_metrics.rs  time.rs  topology.rs  traffic.rs  traffic_detector.rs  world.rs
crates/elevator-core/src/components/: access.rs  car_call.rs  cyclic.rs  destination_queue.rs  elevator.rs  hall_call.rs  line.rs  mod.rs  patience.rs  position.rs  rider.rs  rider_state.rs  route.rs  service_mode.rs  stop.rs  units.rs  zone.rs
crates/elevator-core/src/dispatch/: assignment.rs  destination.rs  etd.rs  look.rs  loop_schedule.rs  loop_sweep.rs  manifest.rs  mod.rs  nearest_car.rs  reposition.rs  rsr.rs  scan.rs  scratch.rs  sweep.rs
crates/elevator-core/src/query/: fetch.rs  filter.rs  iter.rs  mod.rs  storage.rs
crates/elevator-core/src/sim/: accessors.rs  calls.rs  construction.rs  destinations.rs  eta.rs  lifecycle.rs  manual.rs  rider.rs  runtime.rs  strategy_set.rs  substep.rs  tagging.rs  topology.rs  transition.rs
crates/elevator-core/src/systems/: advance_queue.rs  advance_transient.rs  dispatch.rs  doors.rs  energy.rs  loading.rs  metrics.rs  mod.rs  movement.rs  reposition.rs
crates/elevator-core/src/tests/: abort_movement_tests.rs  access_tests.rs  adaptive_parking_tests.rs  api_surface_tests.rs  arrival_log_tests.rs  boundary_tests.rs  braking_tests.rs  builder_tests.rs  bypass_tests.rs  canonical_benchmarks.rs  config_tests.rs  destination_dispatch_tests.rs  destination_queue_tests.rs  direction_indicator_tests.rs  direction_stall_tests.rs  dispatch_commitment_tests.rs  dispatch_pruning_tests.rs  dispatch_tests.rs  door_control_tests.rs  door_tests.rs  energy_tests.rs  fp_tests.rs  (+52 more)
crates/elevator-core/tests/: deterministic_replay.rs  integration.rs  parse_asset_configs.rs  single_call_single_car.rs  snapshot_roundtrip.rs
crates/elevator-ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/elevator-ffi/include/: elevator_ffi.h
crates/elevator-ffi/src/: events_encode.rs  gms_shims.rs  lib.rs
crates/elevator-ffi/tests/: ffi_roundtrip.rs
crates/elevator-gdext/: Cargo.toml
crates/elevator-gdext/src/: lib.rs  sim_node.rs
crates/elevator-layout-codegen/: Cargo.toml
crates/elevator-layout-codegen/src/: main.rs
crates/elevator-layout-derive/: Cargo.toml
crates/elevator-layout-derive/src/: lib.rs
crates/elevator-layout-runtime/: Cargo.toml
crates/elevator-layout-runtime/src/: lib.rs
crates/elevator-sim-bevy/: Cargo.toml
crates/elevator-sim-bevy/src/: camera.rs  input.rs  main.rs  passenger_ai.rs  plugin.rs  rendering.rs  sim_bridge.rs  ui.rs
crates/elevator-sim-core/: Cargo.toml  README.md
crates/elevator-sim-core/benches/: dispatch_bench.rs  scaling_bench.rs  sim_bench.rs
crates/elevator-sim-core/examples/: basic.rs  config_file.rs  custom_dispatch.rs  extensions.rs  scenario.rs
crates/elevator-sim-core/fuzz/: Cargo.toml
crates/elevator-sim-core/src/: builder.rs  compat.rs  config.rs  dispatch.rs  door.rs  elevator.rs  entity.rs  error.rs  events.rs  hooks.rs  ids.rs  lib.rs  metrics.rs  movement.rs  passenger.rs  scenario.rs  sim.rs  snapshot.rs  stop.rs  tagged_metrics.rs  time.rs  traffic.rs  world.rs
crates/elevator-sim-core/tests/: integration.rs  snapshot_roundtrip.rs
crates/elevator-tui/: Cargo.toml
crates/elevator-tui/src/: app.rs  cli.rs  config_io.rs  headless.rs  lib.rs  main.rs  picker.rs  state.rs
crates/elevator-tui/tests/: live_walkthrough.rs  render_snapshot.rs
crates/elevator-wasm/: CHANGELOG.md  Cargo.toml
crates/elevator-wasm/src/: dto.rs  js_dispatch.rs  lib.rs  result.rs  world_view.rs
crates/elevator-wasm/tests/: contract.rs  empty_constructor.rs  event_tag.rs  home_stop.rs  per_elevator_setters.rs  playground_scenarios.rs  positions_packed.rs  rider_tag.rs  snapshot_bytes.rs  snapshot_checksum.rs  spawn_rider_ref.rs  strategy_js.rs
(+1704 files in other folders)
