[workspace]
resolver = "2"
members = ["crates/elevator-sim-core", "crates/elevator-sim-bevy"]
default-members = ["crates/elevator-sim-bevy"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Specific strict lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_docs_in_private_items = "warn"
# Allow reasonable exceptions
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.9"
rand = "0.9"
slotmap = { version = "1", features = ["serde"] }
