[workspace]
resolver = "2"
members = [
    "crates/elevator-core",
    "crates/elevator-bevy",
    "crates/elevator-contract",
    "crates/elevator-ffi",
    "crates/elevator-gdext",
    "crates/elevator-layout-codegen",
    "crates/elevator-layout-derive",
    "crates/elevator-layout-runtime",
    "crates/elevator-tui",
    "crates/elevator-wasm",
]
default-members = ["crates/elevator-bevy"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andymai/elevator-core"
rust-version = "1.88"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Strict lints: zero panics in library code
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_docs_in_private_items = "warn"
# Types like ElevatorPhase::DoorOpening read naturally without the module prefix
module_name_repetitions = "allow"
# Enforce #[must_use] on all public return values
must_use_candidate = "deny"
# Errors sections added to all Result-returning public fns
missing_errors_doc = "warn"
# Panic paths are already denied; documenting them is redundant
missing_panics_doc = "allow"
# Simulation math intentionally uses as-casts for u64/usize -> f64 (values stay within f64 mantissa range)
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.12"
rand = "0.10"
slotmap = { version = "1", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
