[package]
name = "elevator-bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "elevator_bevy"
path = "src/lib.rs"

[[bin]]
name = "elevator-bevy"
path = "src/main.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[dependencies]
elevator-core = { path = "../elevator-core" }
bevy = { version = "0.18", default-features = false, features = ["2d", "png", "x11"] }
serde.workspace = true
ron.workspace = true
rand.workspace = true
