[package]
name = "elevator-bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
elevator-core = { path = "../elevator-core" }
bevy = { version = "0.18", default-features = false, features = ["2d"] }
ron.workspace = true
rand.workspace = true
