[package]
name = "elevator-ffi"
version = "0.11.0"
edition.workspace = true
description = "C ABI for elevator-core (Unity / native interop)"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Distributed as a prebuilt cdylib + header per platform, not via
# crates.io. release-please still tracks the version + tag so consumers
# can pin against a specific build.
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "allow"
missing_safety_doc = "allow"

[features]
default = []
# Mirror elevator-core's `energy` feature so the FFI surfaces
# `Event::EnergyConsumed` in the drained event stream.
energy = ["elevator-core/energy"]
# Mirror elevator-core's `deterministic-fp` feature for consumers
# (Unity/.NET, .so/.dylib/.dll prebuilt natives) running lockstep
# across heterogeneous architectures who need byte-exact sim
# outputs. See elevator-core's docs for the full guarantee.
deterministic-fp = ["elevator-core/deterministic-fp"]

[dependencies]
elevator-core = { path = "../elevator-core" }
ron = { workspace = true }
serde = { workspace = true }
slotmap = { workspace = true }

[build-dependencies]
cbindgen = "0.29"
