[package]
name = "elevator-layout-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proc-macro that emits LayoutInfo metadata for #[repr(C)] structs in elevator-ffi."
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
