[package]
name = "elevator-sim-bevy"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
elevator-sim-core = { path = "../elevator-sim-core" }
bevy = { version = "0.18", default-features = false, features = ["2d"] }
serde.workspace = true
ron.workspace = true
rand.workspace = true
