[package]
name = "elevator-sim-core"
version.workspace = true
edition.workspace = true
description = "Engine-agnostic elevator simulation library with pluggable dispatch strategies"
license = "MIT OR Apache-2.0"
categories = ["game-engines", "simulation"]
keywords = ["elevator", "dispatch", "simulation"]

[features]
default = ["traffic"]
traffic = ["dep:rand"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
rand = { workspace = true, optional = true }
slotmap.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ron.workspace = true
proptest = "1"

[[bench]]
name = "sim_bench"
harness = false
