[package]
name = "elevator-sim-core"
version.workspace = true
edition.workspace = true
description = "Engine-agnostic elevator simulation library with pluggable dispatch strategies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andyaragon/elevator-sim"
readme = "README.md"
rust-version = "1.87"
categories = ["game-engines", "simulation"]
keywords = ["elevator", "dispatch", "simulation", "ecs", "building"]

[features]
default = ["traffic"]
traffic = ["dep:rand"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
ron.workspace = true
rand = { workspace = true, optional = true }
slotmap.workspace = true
ordered-float = { version = "5", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "sim_bench"
harness = false

[[bench]]
name = "scaling_bench"
harness = false

[[bench]]
name = "dispatch_bench"
harness = false
