[package]
name = "elevator-tui"
version = "0.1.0"
edition.workspace = true
description = "Terminal UI debugger for elevator-core (interactive viewer + headless runner)"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "elevator-tui"
path = "src/main.rs"

[dependencies]
elevator-core = { path = "../elevator-core", features = ["traffic"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
ron.workspace = true
serde.workspace = true
serde_json = "1"
anyhow = "1"

[dev-dependencies]
insta = "1"
slotmap = { workspace = true }
