[package]
name = "elevator-wasm"
version = "0.17.0"
edition.workspace = true
description = "wasm-bindgen surface for elevator-core (browser playground)"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
# wasm-bindgen's generated code contains `unsafe impl`s.
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "allow"
# wasm-bindgen exports use `must_use` sparingly; avoid fighting the macro.
must_use_candidate = "allow"
# wasm-bindgen-exported methods cannot be `const fn` (the macro generates a
# non-const wrapper), so the lint produces noise across every trivial getter.
missing_const_for_fn = "allow"

[features]
default = []
# Mirror elevator-core's `deterministic-fp` feature for browser/server
# lockstep consumers (e.g. tower-together) running across V8 builds
# that may not all expose hardware FMA identically.
deterministic-fp = ["elevator-core/deterministic-fp"]

[dependencies]
elevator-core = { path = "../elevator-core", features = ["traffic"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5", default-features = false, features = ["js"] }
serde = { workspace = true }
ron = { workspace = true }
slotmap = { workspace = true }

# getrandom's js backend is required for `rand` on wasm32 targets. Only one
# version is in the dep graph today (rand 0.10 → getrandom 0.4); the explicit
# direct dep is what flips on the `wasm_js` backend. Kept target-scoped so
# native (x86_64) builds of this crate are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
# Drives the cross-target contract test in `tests/contract.rs`. Verifies
# `Simulation` produces byte-identical snapshot bytes on wasm32 and
# native — the gate that catches a `getrandom`/`HashMap`-style
# divergence before it ships to the playground.
wasm-bindgen-test = "0.3"
rand = { workspace = true }
